app/assets/stylesheets/main.less
@import "variables";
@import "elements";
@import "grid";

@link-color: @blue;

/* Sidebar background color */
@sidebarBaseColor: #30426a;
/* Sidebar header and footer color */
@sidebarHeaderColor: darken(@sidebarBaseColor, 2%);
/* Sidebar title text colour */
@sidebarTitleColor: lighten(@sidebarBaseColor, 30%);
/*#627cb7*/

@import 'sidebar';
@import "aside";
@import "widget";

.fa-spin-left {
  -webkit-animation: spin-left 2s infinite linear;
  -moz-animation: spin-left 2s infinite linear;
  -o-animation: spin-left 2s infinite linear;
  animation: spin-left 2s infinite linear;
}

@-moz-keyframes spin-left {
  0% {
    -moz-transform: rotate(0deg);
  }
  100% {
    -moz-transform: rotate(-359deg);
  }
}

@-webkit-keyframes spin-left {
  0% {
    -webkit-transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(-359deg);
  }
}

@-o-keyframes spin-left {
  0% {
    -o-transform: rotate(0deg);
  }
  100% {
    -o-transform: rotate(-359deg);
  }
}

@-ms-keyframes spin-left {
  0% {
    -ms-transform: rotate(0deg);
  }
  100% {
    -ms-transform: rotate(-359deg);
  }
}

@keyframes spin-left {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(-359deg);
  }
}

/* global utilitly classes ********************************************/
html, body {
  height: 100%;
  width: 100%;
}

.a-right {
  text-align: right;
}

.clearfix() {
  &:before,
  &:after {
    content: " "; /* 1 */
    display: table; /* 2 */
  }
  &:after {
    clear: both;
  }
}

.clickable {
  &:hover {
    cursor: pointer;
  }
}

.pointer {
  cursor: pointer;
}

.navbar-default {
  background-color: #f6f6f6;
  border-color: #e9e9e9;
}

.navbar-inverse {
  background-color: @white;
  border-color: @gray-lighter;
}

/* html element styles **************************************************/

body {
  background: #f3f3f3;
}

a {
  color: @link-color;
}

code {
  color: @gray;
  background: @gray-lighter;
}

/* login & user-dashboard ************************************************/

.user-actions {
  position: absolute;
  top: 10px;
  right: 0px;
  margin-top: 0px;
  margin-right: 1.04167%;
  margin-bottom: 0px;
  margin-left: 1.04167%;
}

.actor-list {
  i {
    color: @brand-info;
  }
}

/* page, content and sidebar wrappers ********************************/

#page-wrapper {
  padding-left: 70px;
  height: 100%
}

#sidebar-wrapper {
  margin-left: -150px;
  left: -30px;
  width: 250px;
  position: fixed;
  height: 100%;
  z-index: 999;
}

#page-wrapper, #sidebar-wrapper {
  transition: all .4s ease 0s;
}

#content-wrapper {
  padding-left: 0;
  margin-left: 0;
  width: 100%;
  height: auto;
}

@media only screen and (min-width: 561px) {
  #page-wrapper.open {
    padding-left: 250px;
  }
}

@media only screen and (max-width: 560px) {
  #page-wrapper.open {
    padding-left: 70px;
  }
}

#page-wrapper.open #sidebar-wrapper {
  left: 150px;
}

/* page /view header  *************************************************/

.page-header {
  .row(12);
  background: @white;
  height: 60px;
  margin-bottom: 15px;
  .meta {
    .column(12, 12);
  }
  .page {
    font-size: 1.25em;
    font-weight: bold;
  }
  .organization {
    font-weight: bold;
  }
  .actions {
    position: absolute;
    right: 155px;
    top: 10px;
  }
}

/* custom button styles ************************************************/

.btn-isolate {
  margin-left: 32px !important;
}

.btn-inverse {
  background: transparent;
  color: @gray-dark;
  &:hover {
    color: @gray-light;
  }
}

.btn-link {
  color: @link-color;
  &:hover {
    color: @bright-blue;
  }
}

/* custom label styles ************************************************/

.label-inverse {
  background: @white;
  border: 1px solid @ash-gray;
  color: @brand-primary;
  color: @brand-primary;
}

/* vertical scroll directive styles ************************************/

.vertical-scroll {
  height: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  position: relative;
  width: 100%;
}

/* dashboard file list styles *******************************************/

@total-width: 100%;

.file-list {
  .row(12);
  //margin-top: -15px;
  .progress {
    margin-bottom: 0px;
    height: 22px;
  }
  .widget {
    margin-bottom: 0px;
    border: none;
  }
}

.toolbar {	
  .row(12);	
  background: @white;	
  margin-top: -15px;	
  padding: 20px;	
 	 
}

/* dataset-list *********************************************************/

.navbar-filters {
  text-align: center;
  .state-filters {
    margin-bottom: 10px;
  }
}

.dataset-forms {
  padding-top: 15px;
}

.dataset-list-table {
  background: @white;
  display: inline-block;
  margin: 0 0 0 0;
  border-top: none;
  border-collapse: collapse;
  width: 100%;
  tr, thead, tbody {
    width: 100%;
    display: flex;
    align-items: stretch;
  }
  th {
    background: @gray-lighter;
    text-align: left !important;
    padding: 5px 10px;
    border-bottom: 1px solid @gray;
  }
  tr:hover td {
    background: @gray-lighter;
  }
  tr.open td {
    background: @linnen;
  }
  td {
    background: @white;
    padding: 5px 10px;
    //border: none;
    border-bottom: 1px solid @gray-light;
    text-align: left;
  }
  .spec {
    width: 200px;
    overflow: hidden;
    text-overflow: ellipsis;
    .spec-field {
      white-space: nowrap;
      overflow: hidden;
    }
  }
  .name {
    flex: 1;
    overflow: hidden;
    text-overflow: ellipsis;
    .name-field {
      white-space: nowrap;
      overflow: hidden;
    }
  }
  .acquired {
    width: 120px;
    white-space: nowrap;
    i {
      margin-right: 4px;
    }
  }
  .source {
    width: 100px;
    white-space: nowrap;
  }
  .trend {
    width: 80px;
    white-space: nowrap;
    text-align: right;
    i {
      margin-right: 2px;
    }
  }
  .activity {
    width: 150px;
    min-width: 150px;
    text-align: center;
    white-space: nowrap;
  }
  .status {
    text-align: center;
    width: 180px;
    //flex: 1;
  }
  .date-time {
    width: 150px;
  }
}
/* ... */

